--- a/src/main/resources/templates/helpBoxTemplate.html
+++ b/src/main/resources/templates/helpBoxTemplate.html
@@ -72,7 +72,7 @@
         <!-- İletişim Bilgisi -->
         <div class="contact-info">
             <p>Eğer <strong th:text="${username}"></strong> isimli kullanıcıyla iletişim kurmak isterseniz, lütfen aşağıdaki e-posta adresini kullanınız:</p>
-            <p><strong th:text="${email}"></strong></p>
+            <p><strong th:text="${userEmail}"></strong></p>
         </div>
 
         <!-- Şirket Bilgisi -->
